// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqitch package dependencies with resolved tags [simple-w-tags/1st] 1`] = `
{
  "deps": {
    "/deploy/schema_myfirstapp.sql": [],
    "/deploy/table_products.sql": [
      "my-first:schema_myfirstapp",
      "my-first:table_users",
    ],
    "/deploy/table_users.sql": [
      "my-first:schema_myfirstapp",
    ],
  },
  "external": [],
  "resolved": [
    "schema_myfirstapp",
    "table_users",
    "schema_myfirstapp",
    "schema_myfirstapp",
    "table_users",
    "table_products",
  ],
  "resolvedTags": {},
}
`;

exports[`sqitch package dependencies with resolved tags [simple-w-tags/2nd] 1`] = `
{
  "deps": {
    "/deploy/create_another_table.sql": [
      "my-second:create_table",
    ],
    "/deploy/create_schema.sql": [
      "my-first:table_users",
    ],
    "/deploy/create_table.sql": [
      "my-second:create_schema",
    ],
    "my-first:table_users": [],
  },
  "external": [
    "my-first:table_users",
    "my-first:table_users",
  ],
  "resolved": [
    "create_schema",
    "create_table",
    "create_schema",
    "create_table",
    "create_another_table",
  ],
  "resolvedTags": {},
}
`;

exports[`sqitch package dependencies with resolved tags [simple-w-tags/3rd] 1`] = `
{
  "deps": {
    "/deploy/create_schema.sql": [
      "my-first:table_products",
      "my-second:create_table",
    ],
    "/deploy/create_table.sql": [
      "my-third:create_schema",
      "my-second:create_another_table",
    ],
    "my-first:table_products": [],
    "my-second:create_another_table": [],
    "my-second:create_table": [],
  },
  "external": [
    "my-first:table_products",
    "my-second:create_table",
    "my-second:create_another_table",
  ],
  "resolved": [
    "create_schema",
    "create_table",
  ],
  "resolvedTags": {},
}
`;

exports[`stage fixture dependency resolution - resolved tags resolves tags to changes from plan only for unique-names 1`] = `
{
  "deps": {
    "/deploy/schemas/unique_names/procedures/generate_name.sql": [
      "schemas/unique_names/schema",
      "schemas/unique_names/tables/words/table",
    ],
    "/deploy/schemas/unique_names/schema.sql": [
      "launchql-ext-default-roles:roles/administrator/role",
      "launchql-ext-defaults:defaults/public",
      "launchql-ext-verify:procedures/verify_view",
    ],
    "/deploy/schemas/unique_names/tables/words/fixtures/1589271124916_fixture.sql": [
      "schemas/unique_names/schema",
      "schemas/unique_names/tables/words/table",
    ],
    "/deploy/schemas/unique_names/tables/words/indexes/words_type_idx.sql": [
      "schemas/unique_names/schema",
      "schemas/unique_names/tables/words/table",
    ],
    "/deploy/schemas/unique_names/tables/words/table.sql": [
      "schemas/unique_names/schema",
    ],
    "launchql-ext-default-roles:roles/administrator/role": [],
    "launchql-ext-defaults:defaults/public": [],
    "launchql-ext-verify:procedures/verify_view": [],
  },
  "external": [
    "launchql-ext-default-roles:roles/administrator/role",
    "launchql-ext-defaults:defaults/public",
    "launchql-ext-verify:procedures/verify_view",
  ],
  "resolved": [
    "schemas/unique_names/schema",
    "schemas/unique_names/tables/words/table",
    "schemas/unique_names/procedures/generate_name",
    "schemas/unique_names/tables/words/fixtures/1589271124916_fixture",
    "schemas/unique_names/tables/words/indexes/words_type_idx",
  ],
  "resolvedTags": {},
}
`;

exports[`stage fixture dependency resolution - resolved tags resolves tags to changes from sql headers for unique-names 1`] = `
{
  "deps": {
    "/deploy/schemas/unique_names/procedures/generate_name.sql": [
      "schemas/unique_names/schema",
      "schemas/unique_names/tables/words/table",
    ],
    "/deploy/schemas/unique_names/schema.sql": [],
    "/deploy/schemas/unique_names/tables/words/fixtures/1589271124916_fixture.sql": [
      "schemas/unique_names/schema",
      "schemas/unique_names/tables/words/table",
    ],
    "/deploy/schemas/unique_names/tables/words/indexes/words_type_idx.sql": [
      "schemas/unique_names/schema",
      "schemas/unique_names/tables/words/table",
    ],
    "/deploy/schemas/unique_names/tables/words/table.sql": [
      "schemas/unique_names/schema",
    ],
  },
  "external": [],
  "resolved": [
    "schemas/unique_names/schema",
    "schemas/unique_names/tables/words/table",
    "schemas/unique_names/tables/words/indexes/words_type_idx",
    "schemas/unique_names/tables/words/fixtures/1589271124916_fixture",
    "schemas/unique_names/procedures/generate_name",
  ],
  "resolvedTags": {},
}
`;
